--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,50 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textViewAdressName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:EditText="false"
+            android:text="@string/adress_name" />
+
+        <TextView
+            android:id="@+id/textViewAdress"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorBkground"
+            android:textSize="30sp"
+            tools:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/textViewPortName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:EditText="false"
+            android:text="@string/port_name" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorBkground"
+            android:textSize="30sp" />
+
+        <TextView
+            android:id="@+id/textViewResult"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/check_link" />
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
