--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,57 +12,50 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textViewAdressName"
+            android:id="@+id/txtAdressName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/adress_name" />
 
         <EditText
-            android:id="@+id/textViewAdress"
+            android:id="@+id/txtAdress"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorBkground"
+            android:digits="0123456789."
             android:ems="10"
             android:inputType="number|numberDecimal"
-            android:digits="0123456789."
             android:textSize="30sp" />
 
         <TextView
-            android:id="@+id/textViewPortName"
+            android:id="@+id/txtPortName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/port_name" />
 
         <EditText
-            android:id="@+id/textViewPort"
+            android:id="@+id/txtPort"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorBkground"
+            android:digits="0123456789"
             android:ems="10"
             android:inputType="number|numberDecimal"
-            android:digits="0123456789"
             android:textSize="30sp" />
 
         <TextView
-            android:id="@+id/textViewResult"
+            android:id="@+id/txtResult"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="24sp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btnSend"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/check_link" />
 
-        <EditText
-            android:id="@+id/editText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            tools:layout_editor_absoluteX="58dp"
-            tools:layout_editor_absoluteY="235dp"
-            />
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
